objects/CuSR_Approval_Process__c.object
<CustomObject>
    <description>Child object to CuSR_Form__c which will store approver and fab details.</description>
    <fields>
        <fullName>AM_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CuSR_Approval_Processes5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AM_Approved_On__c</fullName>
        <label>Approved On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Am_Info_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Am Info Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to User object.</description>
        <label>Approver 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CuSR_Approval_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User.</description>
        <label>Approver 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CuSR_Approval_Processes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to User.</description>
        <label>Approver 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CuSR_Approval_Processes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CuSR_Form__c</fullName>
        <description>Master Record.</description>
        <label>CuSR Form</label>
        <referenceTo>CuSR_Form__c</referenceTo>
        <relationshipLabel>CuSR Approval Processes</relationshipLabel>
        <relationshipName>CuSR_Approval_Processes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Do_you_require_approval_from_all_users__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if you require approval from all users.</description>
        <label>Do you require approval from all users?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_the_customer_agree_to_pay_for_CUSR__c</fullName>
        <label>Does the customer agree to pay for CUSR?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fab__c</fullName>
        <label>Fab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
                <value>
                    <fullName>FAB 9</fullName>
                </value>
                <value>
                    <fullName>FAB 10</fullName>
                </value>
                <value>
                    <fullName>ASIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_No_Please_provide_justification_2__c</fullName>
        <label>If No, Please provide justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_No_Please_provide_justification__c</fullName>
        <label>If No, Please provide justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Approved_By__c</fullName>
        <label>Approved By</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Approved_DateTime__c</fullName>
        <label>Approved Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_of_Approvers__c</fullName>
        <description>Decide the no of approvers</description>
        <label>No of Approvers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_quote_reference_number__c</fullName>
        <label>Pricing quote reference number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remind_On_3rd_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remind On 3rd Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remind_On_7th_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remind On 7th Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dresden</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Malta</fullName>
                </value>
                <value>
                    <fullName>Essex Junction</fullName>
                </value>
                <value>
                    <fullName>East Fishkill</fullName>
                </value>
                <value>
                    <fullName>ASIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the approval.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Approver__c</fullName>
        <description>Picklist value to decide the type of approver.</description>
        <label>Type of Approver</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>System Owner</fullName>
                </value>
                <value>
                    <fullName>FAB Owner</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>FAB 1 Owner</fullName>
                </value>
                <value>
                    <fullName>FAB 2 Owner</fullName>
                </value>
                <value>
                    <fullName>FAB 3 Owner</fullName>
                </value>
                <value>
                    <fullName>FAB 3E Owner</fullName>
                </value>
                <value>
                    <fullName>FAB 5 Owner</fullName>
                </value>
                <value>
                    <fullName>FAB 6 Owner</fullName>
                </value>
                <value>
                    <fullName>FAB 7 Owner</fullName>
                </value>
                <value>
                    <fullName>FAB 8 Owner</fullName>
                </value>
                <value>
                    <fullName>FAB 9 Owner</fullName>
                </value>
                <value>
                    <fullName>FAB 10 Owner</fullName>
                </value>
                <value>
                    <fullName>ASIC Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_GLOBALFOUNDRIES_charge_the_customer__c</fullName>
        <label>Will GLOBALFOUNDRIES charge the customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CuSR Approval Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Approver1__c</columns>
        <columns>CuSR_Form__c</columns>
        <columns>Status__c</columns>
        <columns>Type_of_Approver__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Approved__c</columns>
        <columns>AM_Approved_By__c</columns>
        <columns>Legacy_Approved_By__c</columns>
        <columns>Legacy_Approved_DateTime__c</columns>
        <columns>AM_Approved_On__c</columns>
        <columns>Approver1__c</columns>
        <columns>Approver2__c</columns>
        <columns>Approver3__c</columns>
        <columns>Approver4__c</columns>
        <columns>Approver5__c</columns>
        <columns>CuSR_Form__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CuSR_Form__c</field>
            <operation>equals</operation>
            <value>CUSR-16-01279</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CUSR-APPROVAL-{YY}-{00000}</displayFormat>
        <label>CuSR Approval Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CuSR Approval Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>